@@ -5,7 +5,8 @@
 
 /*!40000 ALTER TABLE `talerta` DISABLE KEYS */;
 LOCK TABLES `talerta` WRITE;
-INSERT INTO `talerta` VALUES (1,'eMail','echo _field3_ | sendmail -s _field2_ _field1_','Send email from Pandora Server. mail is a default command on all &quot;standard&quot; Unix systems, using:\r\n_field1_ as destination email address, and\r\n_field2_ as subject for message. \r\n_field3_ as text of message.'),(2,'LogFile','echo _timestamp_ pandora _field1_ _field2_  &gt;&gt; /var/log/pandora_alert.log','This is a default alert to write alerts in a standard ASCII  plaintext log file in /var/log/pandora_alert.log\r\n'),(3,'Internal Audit','','This alert save alert in Pandora interal audit system. Fields are static and only _field1_ is used.'),(4,'SNMP Trap','/usr/bin/snmptrap -v 1 -c trap_public 192.168.0.4 1.1.1.1.1.1.1.1 _agent_ _field1_','Send a SNMPTRAP to 192.168.0.4. Please review config and adapt to your needs, this is only a sample, not functional itself.'),(5,'SMS Text','echo _field2_ | mail -s PANDORA_field1_ slerena@vodafone.es','Send SMS via e-mail gateway. Use field1 for a short SMS text (35 chars) and field 2 for text message (full SMS)'),(6,'Syslog','/usr/bin/logger -pri daemon.alert Pandora Alert _agent_ _field1_ _field2_','Uses field1 and field2 to generate Syslog alert in facility &quot;daemon&quot; with &quot;alert&quot; level.'),(7,'Sound Alert','/usr/bin/play /usr/share/sounds/alarm.wav','');
+INSERT INTO `talerta` VALUES (1,'eMail','echo _field3_ | sendmail -s _field2_ _field1_','Send email from Pandora Server. mail is a default command on all &quot;standard&quot; Unix systems, using:\r\n_field1_ as destination email address, and\r\n_field2_ as subject for message. \r\n_field3_ as text of message.'),(2,'LogFile','echo _timestamp_ pandora _field1_ _field2_  &gt;&gt; /var/log/pandora_alert.log','This is a default alert to write alerts in a standard ASCII  plaintext log file in /var/log/pandora_alert.log\r\n'),(3,'Internal Audit','','This alert save alert in Pandora interal audit system. Fields are static and only _field1_ is used.'),(4,'SNMP Trap','/usr/bin/snmptrap -v 1 -c trap_public 192.168.0.4 1.1.1.1.1.1.1.1 _agent_ _field1_','Send a SNMPTRAP to 192.168.0.4. Please review config and adapt to your needs, this is only a sample, not functional itself.'),(5,'SMS Text','echo _field2_ | mail -s PANDORA_field1_ slerena@vodafone.es','Send SMS via e-mail gateway. Use field1 for a short SMS text (35 chars) and field 2 for text message (full SMS)'),(6,'Syslog','logger -p daemon.alert Pandora Alert _agent_ _field1_ _field2_','Uses field1 and field2 to generate Syslog alert in facility &quot;daemon&quot; with &quot;alert&quot; level.'),(7,'Sound Alert','/usr/bin/play /usr/share/sounds/alarm.wav',''), (8,'Jabber Alert','echo _field3_ | sendxmpp -r _field1_ --chatroom _field2_','Send jabber alert to chat room in a predefined server (configure first .sendxmpprc file). Uses field3 as text message, field1 as useralias for source message, and field2 for chatroom name'), (9, 'Synthetized Speech', 'flite -t _FIELD2_','Uses commandline voice synthetizer to "speak" text given as parameter 1 and 2');
+
 UNLOCK TABLES;
 /*!40000 ALTER TABLE `talerta` ENABLE KEYS */;
 
